# darley-technologies-assessment

./: .gitignore  LICENSE  README.md  SELF_EVALUATION.md
data-structures-and-algorithms/: Cargo.toml
data-structures-and-algorithms/hash-table/: Cargo.toml
data-structures-and-algorithms/hash-table/benches/: benchmarks.rs
data-structures-and-algorithms/hash-table/src/: lib.rs  linked_open_addressing.rs  traits.rs
data-structures-and-algorithms/word-frequency/: Cargo.toml
data-structures-and-algorithms/word-frequency/src/: main.rs
data-structures-and-algorithms/word-processor/: Cargo.toml
data-structures-and-algorithms/word-processor/examples/: gutenberg_analysis.rs  gutenberg_analysis_from_file.rs
data-structures-and-algorithms/word-processor/src/: capacity.rs  config.rs  error.rs  io.rs  lib.rs  parser.rs
docs/: full_benchmark.txt
trading-specific-algorithms/: Cargo.toml  README.md
trading-specific-algorithms/binance-options-cli/: Cargo.toml  README.md
trading-specific-algorithms/binance-options-client/: Cargo.toml  README.md
trading-specific-algorithms/binance-options-client/benches/: benchmarks.rs
trading-specific-algorithms/binance-options-client/examples/: minimal_example.rs
trading-specific-algorithms/binance-options-client/src/: api.rs  error.rs  lib.rs  model.rs  parser.rs
