[package]
name = "binance-options-client"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
log = "0.4.26"
env_logger = "0.11.6"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
rand = "0.9"

[[bench]]
name = "benchmarks"
harness = false
